fix: dropdown demo, empty, input-number, modal icon, select icon, tooltip, popover
Change-Id: I0567c386d51ca101acdc6db813235daa03934cff

--- a/packages/ui/empty/src/index.less
+++ b/packages/ui/empty/src/index.less
@@ -1,1 +1,7 @@
 @osui-empty-class-prefix: osui-empty;
+
+.@{osui-empty-class-prefix} {
+    .ant-empty-image {
+        margin-bottom: var(--empty-image-margin-bottom);
+    }
+}
