--- a/packages/ui/select/src/index.less
+++ b/packages/ui/select/src/index.less
@@ -22,7 +22,7 @@
 
     // arrow icon
     .@{ant-prefix}-select-arrow {
-        top: 43%;
+        top: var(--select-arrow-top);
         width: @font-size-lg;
         height: @font-size-lg;
 
