--- a/packages/ui/tooltip/src/index.less
+++ b/packages/ui/tooltip/src/index.less
@@ -5,6 +5,10 @@
         box-shadow: var(--shadow-1);
     }
 
+    .@{ant-prefix}-tooltip-inner {
+        min-height: var(--tooltip-min-height);
+    }
+
     &.@{ant-prefix}-tooltip-placement-top .@{ant-prefix}-tooltip-arrow,
     &.@{ant-prefix}-tooltip-placement-topLeft .@{ant-prefix}-tooltip-arrow,
     &.@{ant-prefix}-tooltip-placement-topRight .@{ant-prefix}-tooltip-arrow,
