fix: 调整empty, brand-provider增加对antd configProvider 默认的覆盖
Change-Id: Ia0ab6b3b29a3a46a7b1f241cfd31da6bafddd4f4

--- a/packages/ui/empty/src/index.less
+++ b/packages/ui/empty/src/index.less
@@ -1,7 +1,13 @@
 @osui-empty-class-prefix: osui-empty;
 
 .@{osui-empty-class-prefix} {
-    .ant-empty-image {
+    .@{ant-prefix}-empty-image {
         margin-bottom: var(--empty-image-margin-bottom);
+    }
+}
+
+.@{osui-empty-class-prefix}-small {
+    .@{ant-prefix}-empty-image {
+        height: 40px;
     }
 }
