fix: tabs 调整, switch demo调整
Change-Id: I744bf7a1cda01f0acb3c6373342393cc3d3af1d2

--- a/packages/ui/checkbox/src/index.less
+++ b/packages/ui/checkbox/src/index.less
@@ -2,8 +2,8 @@
 
 .@{osui-checkbox-class-prefix},
 .@{osui-checkbox-class-prefix}-group .@{ant-prefix}-checkbox-group-item {
-    .ant-checkbox:not(.ant-checkbox-checked) {
-        .ant-checkbox-inner {
+    .@{ant-prefix}-checkbox:not(.@{ant-prefix}-checkbox-checked) {
+        .@{ant-prefix}-checkbox-inner {
             border-color: var(--checkbox-border-color);
         }
     }
