--- a/packages/ui/input-number/src/index.less
+++ b/packages/ui/input-number/src/index.less
@@ -3,11 +3,11 @@
 .@{osui-input-number-class-prefix} {
     width: var(--input-number-width);
 
-    .ant-input-number-handler {
+    .@{ant-prefix}-input-number-handler {
         transition: none;
     }
 
-    .ant-input-number-input {
+    .@{ant-prefix}-input-number-input {
         height: var(--input-number-input-height);
     }
 
