--- a/packages/ui/pagination/src/index.less
+++ b/packages/ui/pagination/src/index.less
@@ -22,7 +22,7 @@
             color: var(--pagination-prev-next-icon-color);
         }
 
-        &.ant-pagination-disabled {
+        &.@{ant-prefix}-pagination-disabled {
             svg {
                 color: var(--pagination-prev-next-icon-color-disabled);
             }
