docs: button补充交互样式
Change-Id: Icca5ea09a54756829ab29bcd2f2f9920b2aeaf78

--- a/packages/ui/button/stories/index.less
+++ b/packages/ui/button/stories/index.less
@@ -9,3 +9,15 @@
         color: var(--theme-primary-color-active);
     }
 }
+
+.text-link {
+    color: var(--theme-text-color);
+}
+
+.text-link:hover {
+    color: var(--link-hover-color);
+}
+
+.text-link:active {
+    color: var(--link-active-color);
+}
