--- a/packages/ui/docs/icloud/stories/button/index.less
+++ b/packages/ui/docs/icloud/stories/button/index.less
@@ -9,3 +9,15 @@
         color: var(--theme-primary-color-active);
     }
 }
+
+.text-link {
+    color: var(--theme-text-color);
+}
+
+.text-link:hover {
+    color: var(--link-hover-color);
+}
+
+.text-link:active {
+    color: var(--link-active-color);
+}
