fix: input search icon大小修复
Change-Id: I9f7e3283ceab1fdf2ec4f9b813d711d0345c5c5a

--- a/packages/ui/input/src/index.less
+++ b/packages/ui/input/src/index.less
@@ -123,4 +123,14 @@
     .@{ant-prefix}-select-single.@{ant-prefix}-select-open .@{ant-prefix}-select-selection-item {
         color: var(--theme-primary-color-active);
     }
+
+    .@{ant-prefix}-input-suffix > svg {
+        width: var(--input-suffix-icon-size);
+        height: var(--input-suffix-icon-size);
+    }
+
+    &.@{ant-prefix}-input-affix-wrapper {
+        padding-right: var(--input-affix-wrapper-padding-horizontal);
+        padding-left: var(--input-affix-wrapper-padding-horizontal);
+    }
 }
