fix: select 修复multip时没有arrow, clear icon位置不对的问题
Change-Id: I3c3a8d3a4868672f34580a66a613663de79a1f1b

--- a/packages/ui/select/src/index.less
+++ b/packages/ui/select/src/index.less
@@ -56,8 +56,12 @@
         }
     }
 
-    .@{ant-prefix}-select-clear {
+    .@{ant-prefix}-select-arrow + .@{ant-prefix}-select-clear {
         right: 30px;
+    }
+
+    .@{ant-prefix}-select-clear {
+        right: 11px;
         width: 14px;
         height: 14px;
         color: var(--color-gray-6);
