--- a/packages/ui-theme/icloud-theme/src/antd-vars-patch.less
+++ b/packages/ui-theme/icloud-theme/src/antd-vars-patch.less
@@ -154,7 +154,7 @@
 @btn-primary-color: var(--color-gray-1);
 @btn-primary-bg: var(--color-brand-6);
 @btn-shadow: 0 2px 0 rgba(0, 0, 0, 0);
-@btn-line-height: 20px;
+@btn-line-height: 1.5;
 @btn-disable-color: var(--btn-disable-color);
 @btn-disable-bg: var(--btn-disable-bg);
 @btn-disable-border: var(--btn-disable-border);
