--- a/packages/ui/menu/src/index.less
+++ b/packages/ui/menu/src/index.less
@@ -17,9 +17,9 @@
 
     .@{ant-prefix}-menu-item-group-title {
         height: 28px;
+        padding-top: 0;
+        padding-bottom: 0;
         line-height: 34px;
-        padding-top: 0px;
-        padding-bottom: 0px;
     }
 }
 
@@ -44,8 +44,8 @@
 
     .@{ant-prefix}-menu-item-group-title {
         height: 28px;
+        padding-top: 0;
+        padding-bottom: 0;
         line-height: 34px;
-        padding-top: 0px;
-        padding-bottom: 0px;
     }
 }
