fix: input-number hover动效取消
Change-Id: I5b854f530f066e8acbff4738950040b5740c0c66

--- a/packages/ui/input-number/src/index.less
+++ b/packages/ui/input-number/src/index.less
@@ -11,6 +11,15 @@
         height: var(--input-number-input-height);
     }
 
+    .@{ant-prefix}-input-number-handler-up:hover,
+    .@{ant-prefix}-input-number-handler-down:hover {
+        height: 50% !important;
+    }
+
+    .@{ant-prefix}-input-number-handler-wrap:hover .@{ant-prefix}-input-number-handler {
+        height: 50% !important;
+    }
+
     .@{ant-prefix}-input-number-handler-up-inner,
     .@{ant-prefix}-input-number-handler-down-inner {
         // 修复箭头不居中的问题
