fix: input在form中error时，显示红色背景
Change-Id: I4cb658218b8421f8a561304b1b881b7fd28fea41

--- a/packages/ui-theme/icloud-theme/src/antd-vars-patch.less
+++ b/packages/ui-theme/icloud-theme/src/antd-vars-patch.less
@@ -183,6 +183,7 @@
 // ---
 @label-color: var(--color-gray-9);
 @form-item-margin-bottom: 20px;
+@form-error-input-bg: var(--color-error-1);
 
 // Tabs
 // ---
