--- a/packages/ui/empty/src/index.less
+++ b/packages/ui/empty/src/index.less
@@ -1,13 +1,15 @@
 @osui-empty-class-prefix: osui-empty;
 
-.@{osui-empty-class-prefix} {
+.@{osui-empty-class-prefix}-small {
     .@{ant-prefix}-empty-image {
-        margin-bottom: var(--empty-image-margin-bottom);
+        height: 70px;
+        margin-bottom: 10px;
     }
 }
 
-.@{osui-empty-class-prefix}-small {
+.@{osui-empty-class-prefix}-large {
     .@{ant-prefix}-empty-image {
-        height: 40px;
+        height: 362px;
+        margin-bottom: 20px;
     }
 }
