fix: input增加Input.Search支持icon的形式
Change-Id: If5fe67e8210b8144551b4ca5ca8be5787cf81a6b

--- a/packages/ui/input/src/index.less
+++ b/packages/ui/input/src/index.less
@@ -134,4 +134,8 @@
         padding-right: var(--input-affix-wrapper-padding-horizontal);
         padding-left: var(--input-affix-wrapper-padding-horizontal);
     }
+    // search icon
+    &-search-icon {
+        cursor: pointer;
+    }
 }
