fix: breadcrumb 面包屑颜色为text-color-secondary, /间距调整为4px
Change-Id: Ifed9c502742c604b391322ff0b12ac33b09c9699

--- a/packages/ui-theme/icloud-theme/src/antd-vars-patch.less
+++ b/packages/ui-theme/icloud-theme/src/antd-vars-patch.less
@@ -289,8 +289,8 @@
 
 // Breadcrumb
 // ---
-@breadcrumb-link-color: var(--theme-text-color);
 @breadcrumb-link-color-hover: var(--theme-primary-color);
+@breadcrumb-separator-margin: 0 4px;
 
 // Steps
 // ---
