fix: 调整input search的clear icon距离和前后padding, 调整dropdown menu item的高度
Change-Id: I46134a52a3e940ea412b1bc343d5dbe998666602

--- a/packages/ui/input/src/index.less
+++ b/packages/ui/input/src/index.less
@@ -138,4 +138,8 @@
     &-search-icon {
         cursor: pointer;
     }
+
+    .@{ant-prefix}-input-clear-icon {
+        margin: 0 var(--input-affix-margin);
+    }
 }
