fix: input 调整 addon 样式和交互
Change-Id: I8f590f1b8644dacbb4835d332fc39f6f2122e4ca

--- a/packages/ui-theme/icloud-theme/src/antd-vars-patch.less
+++ b/packages/ui-theme/icloud-theme/src/antd-vars-patch.less
@@ -75,6 +75,7 @@
 @input-hover-border-color: var(--theme-primary-color-hover);
 @input-placeholder-color: var(--theme-placeholder-color);
 @input-disabled-bg: var(--theme-disabled-bg);
+@input-addon-bg: var(--color-gray-3);
 
 // Table
 // ---
