fix: breadcrumb只有一个面包屑时不加粗
Change-Id: I6d2ffdd5b0c7242f51c20af470e3e6db25cbbf54

--- a/packages/ui/breadcrumb/src/index.less
+++ b/packages/ui/breadcrumb/src/index.less
@@ -1,7 +1,7 @@
 @osui-breadcrumb-class-prefix: osui-breadcrumb;
 
 .@{osui-breadcrumb-class-prefix} {
-    &.@{ant-prefix}-breadcrumb > span:last-child {
+    &.@{ant-prefix}-breadcrumb > span:last-child:not(:first-child) {
         font-weight: var(--breadcrumb-last-child-font-weight);
     }
 
