--- a/packages/ui/empty/src/index.less
+++ b/packages/ui/empty/src/index.less
@@ -4,6 +4,10 @@
     .@{ant-prefix}-empty-image {
         height: 70px;
         margin-bottom: 10px;
+
+        svg {
+            width: 80px;
+        }
     }
 }
 
