--- a/packages/ui/input/src/index.less
+++ b/packages/ui/input/src/index.less
@@ -124,6 +124,10 @@
         }
     }
 
+    .@{ant-prefix}-input-group-addon + .@{ant-prefix}-input-affix-wrapper {
+        border-left: 0;
+    }
+
     .@{ant-prefix}-input-affix-wrapper {
         > input {
             border: 0 !important;
