fix: 修复switch small的圆点位置
Change-Id: Idfcb46cc1ce69bdc50cad73d884235fa5c4a0526

--- a/packages/ui/switch/src/index.less
+++ b/packages/ui/switch/src/index.less
@@ -1,8 +1,6 @@
 @osui-switch-class-prefix: osui-switch;
 
-@switch-height: 22px;
 @switch-padding: 2px;
-@switch-pin-size: @switch-height - 4px;
 
 .@{osui-switch-class-prefix} {
     &.@{ant-prefix}-switch {
@@ -48,6 +46,10 @@
     }
 
     &.@{ant-prefix}-switch-checked .@{ant-prefix}-switch-handle {
-        left: ~'calc(100% - @{switch-pin-size} - @{switch-padding})';
+        left: ~'calc(100% - 18px - @{switch-padding})';
+    }
+
+    &.ant-switch-small.osui-switch.ant-switch-checked .ant-switch-handle {
+        left: ~'calc(100% - 12px - @{switch-padding})';
     }
 }
