fix: input form error状态样式调整
Change-Id: I30b11e7376cb0773724956a3628cf9609031a661

--- a/packages/ui/input/src/index.less
+++ b/packages/ui/input/src/index.less
@@ -6,11 +6,11 @@
     &.@{ant-prefix}-input-affix-wrapper-focused,
     &.@{ant-prefix}-input:focus,
     &.@{ant-prefix}-input-focused {
-        background: var(--input-focus-background-color);
+        background-color: var(--input-focus-background-color) !important;
         border-color: var(--theme-border-focus-color) !important;
 
         input.@{ant-prefix}-input {
-            background: var(--input-focus-background-color);
+            background-color: var(--input-focus-background-color) !important;
         }
     }
 
@@ -73,7 +73,7 @@
     &-disabled {
         .@{ant-prefix}-input-group {
             .@{ant-prefix}-input-group-addon {
-                background: var(--theme-border-color-disabled) !important;
+                background-color: var(--theme-border-color-disabled) !important;
                 border-color: var(--theme-border-color-disabled) !important;
             }
 
