--- a/packages/ui-theme/osui-theme/patches/antd-vars-patch.less
+++ b/packages/ui-theme/osui-theme/patches/antd-vars-patch.less
@@ -95,7 +95,7 @@
 @menu-item-active-border-width: 3px;
 @menu-item-group-title-color: var(--menu-item-group-title-color);
 @menu-icon-size: @font-size-base;
-@menu-icon-size-lg: @font-size-lg;
+@menu-icon-size-lg: 16px;
 @menu-item-vertical-margin: 0;
 @menu-item-boundary-margin: 0;
 
