--- a/packages/ui/select/src/index.less
+++ b/packages/ui/select/src/index.less
@@ -23,12 +23,12 @@
     // arrow icon
     .@{ant-prefix}-select-arrow {
         top: var(--select-arrow-top);
-        width: @font-size-lg;
-        height: @font-size-lg;
+        width: 14px;
+        height: 14px;
 
         svg {
             color: var(--theme-disabled-color);
-            font-size: @font-size-lg;
+            font-size: 14px;
             transition: var(--select-arrow-transition);
         }
     }
