--- a/packages/ui/button/stories/index.less
+++ b/packages/ui/button/stories/index.less
@@ -8,20 +8,24 @@
     &:active {
         color: var(--theme-primary-color-active);
     }
+
+    &[disabled] {
+        color: var(--color-brand-3);
+    }
 }
 
 .text-link {
-    color: var(--theme-text-color);
+    color: var(--theme-primary-color);
 }
 
 .text-link:hover {
-    color: var(--link-hover-color);
+    color: var(--theme-primary-color-hover);
 }
 
 .text-link:active {
-    color: var(--link-active-color);
+    color: var(--theme-primary-color-active);
 }
 
 .text-link:disabled {
-    color: var(--theme-disabled-color);
+    color: var(--color-brand-3);
 }
