fix: joyride修复primaryButton卡住滚动, 增加hideStepSize属性
Change-Id: I683259ef66302b43c9f644c14b1e57ab4a4e330d

--- a/packages/ui/joyride/src/index.less
+++ b/packages/ui/joyride/src/index.less
@@ -37,4 +37,8 @@
         justify-content: space-between;
         margin-top: 20px;
     }
+
+    &-hideStepsSize {
+        visibility: hidden;
+    }
 }
